--- a/src/index.sass
+++ b/src/index.sass
@@ -1,8 +1,16 @@
+body,
+html
+  height: 100%
+  font-family: 'Open Sans', sans-serif
+
 body
   margin: 0
+  padding: 0
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
 code
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
 
+#root
+  height: 100%
