NH-3: Now we can get story, set it into store for caching and go to story page

--- a/src/pages/Layout/styles.module.sass
+++ b/src/pages/Layout/styles.module.sass
@@ -12,6 +12,7 @@ div.rootContainer
   display: flex
   justify-content: space-between
   align-items: center
+  opacity: .5
 
   & > span
     text-align: center
