NH-4: Done, now we can see all comments (nested too)

--- a/src/pages/Stories/styles.module.sass
+++ b/src/pages/Stories/styles.module.sass
@@ -2,13 +2,6 @@
   display: flex
   justify-content: flex-end
   align-items: center
-  position: sticky
-  top: 0
-  margin-top: -50px
-  padding: 50px 0
-  border-bottom: 1px solid #1976d212
-  background-color: white
-  z-index: 1
 
 .storiesWrapper,
 .stories
@@ -31,11 +24,6 @@
   &:hover
     color: #3f50b5
 
-.storyTitle
-  font-family: 'Playfair Display', serif
-  font-size: 32px
-  margin: 0
-
 .info
   opacity: .5
   display: flex
@@ -47,9 +35,7 @@
     position: relative
     left: 7px
 
-.title
-  margin: 0
-  font-family: 'Playfair Display', serif
+.mainTitle
   font-size: 64px
   flex-grow: 2
 
