--- a/src/pages/Story/styles.module.sass
+++ b/src/pages/Story/styles.module.sass
@@ -2,6 +2,9 @@
   position: sticky
   top: 0
 
+.storyContainer
+  padding-top: 50px
+
 .headerRow
   display: flex
   justify-content: space-between
@@ -9,17 +12,18 @@
 
 .infoRow
   padding: 20px 0
-  color: #757ce8
+  color: #1976d2
   display: flex
   gap: 20px
   align-items: center
+  font-weight: bold
 
 .commentInner
   display: flex
   gap: 5px
 
 .author
-  color: #757ce8
+  color: #1976d2
 
 .comments
   display: flex
