--- a/src/libs/styles/shared.module.sass
+++ b/src/libs/styles/shared.module.sass
@@ -2,7 +2,7 @@
   position: sticky
   top: 0
   margin-top: -50px
-  padding: 50px 0
+  padding: 10px 0
   border-bottom: 1px solid #1976d212
   background-color: white
   z-index: 1
@@ -11,3 +11,13 @@
   font-family: 'Playfair Display', serif
   font-size: 32px
   margin: 0
+
+.loadingIcon
+  color: white
+  display: flex
+  justify-content: center
+  align-items: center
+  
+  svg
+    width: 13px
+    height: 13px
