--- a/src/pages/Layout/styles.module.sass
+++ b/src/pages/Layout/styles.module.sass
@@ -1,5 +1,4 @@
 div.rootContainer
-  padding: 50px 0
   min-height: 100%
   display: flex
   flex-direction: column
@@ -11,6 +10,8 @@ div.rootContainer
 .footer
   display: flex
   justify-content: space-between
+  border-top: 1px solid #1976d212
+  padding: 50px 0
   align-items: center
   opacity: .5
 
